Removed user-typing info message for the typing user and corrected textContent wrapping in msg-other

--- a/public/style.css
+++ b/public/style.css
@@ -169,6 +169,7 @@ input {
   margin-right: 20%;
   color: #003459;
   width: fit-content;
+  max-width: 80%;
 }
 .msg.msg-mine {
   background-color: #00405a;
